--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <!-- Title Start-->
   <title>Hover Image Zoom</title>
   
-  <!-- Title End -->
+  <!-- Title En-->
   
       <link rel="stylesheet" href="css/style.css">
 
