--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <!-- Title Start-->
   <title>Hover Image Zoom</title>
   
-  <!-- Title En-->
+  <!-- Title End -->
   
       <link rel="stylesheet" href="css/style.css">
 
